# hostk8s

./: .editorconfig  .env.example  .gitattributes  .gitignore  .gitlab-ci-complex.yml  .gitlab-ci-k8s.yml  .gitlab-ci-no-emoji.yml  .gitlab-ci-orig.yml  .gitlab-ci-simple.yml  .gitlab-ci-step-test.yml  .gitlab-ci-test.yml  .gitlab-ci-test2.yml  .gitlab-ci-working.yml  .gitlab-ci.yml  .mcp.json  .pre-commit-config.yaml  .shellcheckrc  .yamllint.yaml  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  RESULTS.md  buildkitd.toml  docker-compose.yml  kind-config-dev.yaml  localhost-registry-fixed.yaml  localhost-registry-service.yaml  registry-alias-service.yaml  test-windows-compatibility.ps1  troubleshoot-registry-windows.ps1
.claude/: settings.json
.claude/agents/: cluster-agent.md  developer-agent.md  gitops-committer.md  software-agent.md
.claude/commands/: cluster-health.md  commit.md  health.md  optimize.md  prime.md  review.md  worktree.md
.claude/hooks/: enforce-branch-naming.sh  post-commit-sync.sh  run-precommit-checks.sh  validate-git-commit.sh
.github/: copilot-instructions.md
.github/prompts/: commit.md  commit.prompt.md  health.prompt.md  prime.prompt.md
.gitlab/scripts/: sync-to-github.sh
docs/: HYBRID-CI.md  ai-guide.md  architecture.md  secret-contracts.md  storage-contracts.md
scripts/: check-github-workflow.sh  fix-kubernetes-yaml.sh  fix-yaml-formatting.sh  setup-dev-env.sh
software/: README.md
src/: README.md
src/sample-app/vote/: Dockerfile  app.py  pyproject.toml  requirements.txt
src/sample-app/vote/templates/: index.html
(+609 files in other folders)
