[project]
name = "voting-app"
version = "0.1.0"
description = "HostK8s Voting App - Vote Service"
authors = [{name = "HostK8s", email = "dev@hostk8s.local"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "Flask>=3.0.0",
    "Redis>=5.0.0",
    "gunicorn>=21.0.0",
]

[project.optional-dependencies]
dev = [
    "watchdog>=3.0.0",
    "pytest>=7.0.0",
    "pytest-flask>=1.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "watchdog>=3.0.0",
    "pytest>=7.0.0",
    "pytest-flask>=1.2.0",
]
